<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FAIMS</string>
    <string name="welcome">This is the FAIMS Android App!</string>
    <string name="menu_settings">Settings</string>
    <string name="available_modules">Available Modules</string>

    <string name="welcome_to_faims">Welcome to FAIMS</string>
    <string name="faims_description">The FAIMS app is a mobile platform for offline,
        multi-device, spatially-aware data collection, using native Android code,
        and a customisable workflow design.</string>
    
    <string name="choice_positive_button">YES</string>
    <string name="choice_negative_button">NO</string>
    <string name="confirm_dialog_button">OK</string>
    <string name="cancel_dialog_button">Cancel</string>
    
    <string name="connect_to_server">Connect to server</string>
    <string name="select_server">Select server</string>
    <string name="refresh_module_list">Refresh Module List</string>
    <string name="server_name">Server Name</string>
    <string name="server_host">Server Host</string>
    <string name="server_port">Server Port</string>
    <string name="test_connection">Test Connection</string>
    <string name="connect">Connect</string>
    
    <string name="load_module">Load Module</string>
    <string name="version">Version</string>
    <string name="server">Server</string>
    <string name="choose_arch16n">Choose Arch16n:</string>
    
    <string name="locate_server_title">Locating Server</string>
    <string name="locate_server_message">looking for server on network..</string>
    
    <string name="locate_server_failure_title">Could not find Server</string>
    <string name="locate_server_failure_message">Would you like to try again?</string>
    
    <string name="confirm_download_module_title">Download Module</string>
    <string name="confirm_download_module_message">Would you like to download module</string>
    
    <string name="confirm_download_or_update_module_title">Update or Restore Module</string>
    <string name="confirm_download_or_update_module_message">Would you like to update or restore module</string>
    
    <string name="confirm_restore_module_title">Restore Module</string>
    <string name="confirm_restore_module_message">Would you like to restore module</string>
    
    <string name="confirm_download_warning_module_title">Restore Module</string>
    <string name="confirm_download_warning_module_message">Restoring a module from the server will DELETE ALL UNSYNCHRONIZED DATA and custom module settings. 
        It should only be used for emergency restoration of your module.\n\n
        We recommend synchronising or manually backing up data on your device before you Restore.</string>
        
    <string name="confirm_restore_no">No</string>
    <string name="confirm_restore_yes">Yes, restore the module</string>
        
    <string name="confirm_update_module_title">Update Module</string>
    <string name="confirm_update_module_message">Do you want to update module settings or module data?</string>

    <string name="busy_error_title">Server Busy Error</string>
    <string name="download_busy_error_message">Could not download module as the server is busy. Please wait and try again later.</string>
    <string name="update_settings_busy_error_message">Could not update module settings as the server is busy. Please wait and try again later.</string>
    <string name="update_data_busy_error_message">Could not update module maps as the server is busy. Please wait and try again later.</string>
    
    <string name="storage_error_title">Storage Error</string>
    <string name="download_storage_error_message">Could not download module because your device does not have enough storage. Please clear some space and try again.</string>
    <string name="update_settings_storage_error_message">Could not update module settings because your device does not have enough storage. Please clear some space and try again.</string>
    <string name="update_data_storage_error_message">Could not update module maps because your device does not have enough storage. Please clear some space and try again.</string>
    
    <string name="corrupted_error_title">Download Corrupted Error</string>
    <string name="download_corrupted_error_message">Could not download module because a file was corrupted during transfer from the server to your device. Please try again.</string>
    <string name="update_settings_corrupted_error_message">Could not update module settings because a file was corrupted during transfer from the server to your device. Please try again.</string>
    <string name="update_data_corrupted_error_message">Could not update module maps because a file was corrupted during transfer from the server to your device. Please try again.</string>
    
    <string name="server_error_title">Server Error</string>
    <string name="download_server_error_message">Could not download module because there was a network error. Please check your connection to the server and try again.</string>
    <string name="update_settings_server_error_message">Could not update module settings because there was a network error. Please check your connection to the server and try again.</string>
    <string name="update_data_server_error_message">Could not update module maps because there was a network error. Please check your connection to the server and try again.</string>
    
    <string name="interrupted_title">Cancelled</string>
    <string name="download_interrupted_message">Download module cancelled. Would you like to try again?</string>
    <string name="update_settings_interrupted_message">Update module settings cancelled. Would you like to try again?</string>
    <string name="update_data_interrupted_message">Update module maps cancelled. Would you like to try again?</string>
    
    <string name="busy_title">Downloading</string>
    <string name="download_busy_message">Downloading module please wait..</string>
    <string name="update_settings_busy_message">Updating module settings please wait..</string>
    <string name="update_data_busy_message">Updating module maps please wait..</string>
    
    <string name="upload_database_title">Uploading Database</string>
    <string name="upload_database_message">please wait..</string>
    
    <string name="upload_database_failure_title">Could not upload database</string>
    <string name="upload_database_failure_message">Would you like to try again?</string>
    
    <string name="download_database_title">Downloading Database</string>
    <string name="download_database_message">please wait..</string>
    
    <string name="download_database_failure_title">Could not download database</string>
    <string name="download_database_failure_message">Would you like to try again?</string>
    
    <string name="download_database_error_title">Database is too big</string>
    <string name="download_database_error_message">Error storage limit reached</string>
    
    <string name="download_busy_module_error_title">Module caching in progress</string>
    <string name="download_busy_module_error_message">Please wait until module has finished caching on the server and try again</string>
    
    <string name="memory_low_title">Low Memory Error</string>
    <string name="memory_low_message">The application has detected it is running low on memory and needs to be restarted.\nNote: Your data will not be effected in any way.\n\nPlease follow these instructions to restart the application:\n1) Please exit the application by going to the home screen.\n2) Find the application in your recently used apps.\n3) Swipe the application from the recently used apps to remove it from memory.</string>
    
    <string name="load_module_title">Loading module</string>
    <string name="load_module_message">please wait..</string>
    
    <string name="render_ui_failure_title">Loading error</string>
    <string name="render_ui_failure_message">Failed to load module</string>
    
    <string name="faims_fetch_module_list_title">Fetch Module List</string>
    <string name="faims_server_setting_title">Settings</string>
    <string name="faims_about_title">About</string>
    
    <string name="server_ip_settings_title">FAIMS Server Host</string>
    <string name="server_port_settings_title">FAIMS Server Port</string>
    
    <string name="gps_inactive">GPS disabled</string>
    <string name="action_gps_active_has_signal">GPS active has signal</string>
    <string name="action_gps_active_no_signal">GPS active no signal</string>
       
    <string name="tracker_active_has_gps">Track log active, GPS connected</string>
    <string name="tracker_active_no_gps">Track log active, GPS not connected</string>
    <string name="tracker_inactive">Track log disabled</string>
    
    <string name="sync_no_changes">Sync enabled</string>
    <string name="sync_inactive">Sync disabled</string>
    <string name="sync_has_changes">Ready to sync</string>
    <string name="sync_syncing">Sync in progress</string>
    <string name="sync_error">Sync error</string>
    
    <string name="bluetooth_active">Bluetooth active</string>
    <string name="bluetooth_connected">Bluetooth connected</string>
    <string name="bluetooth_disconnected">Bluetooth disconnected</string>
    <string name="bluetooth_error">Bluetooth error</string>
    
    <string name="autosave_active">Autosave enabled</string>
    <string name="autosave_inactive">Autosave disabled</string>
    <string name="autosave_ready">Ready to save</string>
    <string name="autosave_saving">Autosave in progress</string>
    <string name="autosave_error">Autosave error</string>
    
    <string name="distance_text">Tracking distance</string>
    <string name="direction_text">Tracking angle</string>
    <string name="direction_indicator">Tracking direction</string>
    
    <string name="splash_show">Show Modules</string>
    <string name="splash_continue">Continue Last Session</string>
    <string name="splash_connect_demo">Connect to Demo Server</string>
    <string name="splash_connect_server">Enter Server Details</string>
    
    <string name="faims_1_3_warning_title">Error Message</string>
    <string name="faims_1_3_warning_message">Cannot open this module as it is for a previous version of FAIMS. Please contact enquiries@fedarch.org for assistance.</string>

</resources>