<menu xmlns:android="http://schemas.android.com/apk/res/android" >

  <item android:id="@+id/action_gps_inactive"
    android:title="@string/gps_inactive"
    android:icon="@drawable/action_gps_inactive" 
    android:showAsAction="ifRoom"/>
  <item android:id="@+id/action_gps_active_no_signal"
    android:title="@string/action_gps_active_no_signal"
    android:icon="@drawable/action_gps_active" 
    android:showAsAction="ifRoom"/>
  <item android:id="@+id/action_gps_active_has_signal"
    android:title="@string/action_gps_active_has_signal"
    android:icon="@drawable/action_gps_active_signal" 
    android:showAsAction="ifRoom"/>
  <item android:id="@+id/action_tracker_active_no_gps"
    android:title="@string/tracker_active_no_gps"
    android:icon="@drawable/action_track_active_no_gps" 
    android:showAsAction="ifRoom"/>
    <item android:id="@+id/action_tracker_active_has_gps"
    android:title="@string/tracker_active_has_gps"
    android:icon="@drawable/action_track_active_has_gps" 
    android:showAsAction="ifRoom"/>
  <item android:id="@+id/action_tracker_inactive"
    android:title="@string/tracker_inactive"
    android:icon="@drawable/action_track_inactive" 
    android:showAsAction="ifRoom"/>
  <item android:id="@+id/action_sync_active"
    android:title="@string/sync_syncing"
    android:icon="@drawable/action_sync_active"
    android:showAsAction="ifRoom"/>
  <item android:id="@+id/action_sync_has_changes"
    android:title="@string/sync_has_changes"
    android:icon="@drawable/action_sync_active" 
    android:showAsAction="ifRoom"/>
  <item android:id="@+id/action_sync"
    android:title="@string/sync_no_changes"
    android:icon="@drawable/action_sync" 
    android:showAsAction="ifRoom"/>
  <item android:id="@+id/action_sync_error"
    android:title="@string/sync_error"
    android:icon="@drawable/action_sync_error" 
    android:showAsAction="ifRoom"/>
  <item android:id="@+id/action_sync_inactive"
    android:title="@string/sync_inactive"
    android:icon="@drawable/action_sync_inactive" 
    android:showAsAction="ifRoom"/>
  <item android:id="@+id/distance_text"
    android:title=""
    android:showAsAction="always"/>
  <item android:id="@+id/direction_text"
    android:title=""
    android:showAsAction="always"/>
  <item android:id="@+id/direction_indicator"
    android:title=""
    android:showAsAction="always"/>
</menu>