<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@android:color/white">
	
    <LinearLayout
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_gravity="center_vertical"
		android:layout_marginBottom="50dp">

		<WebView android:id="@+id/splashscreen_webview"
		    android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginLeft="25dp"
			android:layout_marginRight="25dp"/>
	
		<LinearLayout android:id="@+id/splash_buttons"
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="50dp"
			android:gravity="center">
			
		    <Button android:id="@+id/splash_connect_demo"
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/button_default"
				android:textColor="#222222"
				android:text="@string/splash_connect_demo"
				style="?android:attr/button"/>
		    
		    <Button android:id="@+id/splash_connect_server"
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/button_success"
				android:textColor="@android:color/white"
				android:text="@string/splash_connect_server"
				style="?android:attr/button"/>
		    
		    <Button android:id="@+id/splash_load"
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/button_primary"
				android:textColor="@android:color/white"
				android:text="@string/splash_load"
				style="?android:attr/button"/>
		    
		    <Button android:id="@+id/splash_continue"
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/button_default"
				android:textColor="#222222"
				android:text="@string/splash_continue"
				style="?android:attr/button"/>
		    
		</LinearLayout>

    </LinearLayout>
	
	<WebView android:id="@+id/splashscreen_attribution"
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom"/>

</FrameLayout>